[package]
name = "java_stats"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.1.1"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.19.1"
toml = "0.8.20"
tree-sitter = "0.25.3"
tree-sitter-java = "0.23.5"
